add logging to file

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #h2 properties
 spring.h2.console.enabled=true
 spring.h2.console.settings.web-allow-others=true
+
+#logging properties
+logging.file = /log/server.log
