--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -12,4 +12,4 @@ spring.h2.console.enabled=true
 spring.h2.console.settings.web-allow-others=true
 
 #logging properties
-logging.file = /log/server.log
+logging.file.name = logs/server.log
