--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
 
-    <groupId>org.example</groupId>
+    <groupId>org.sber</groupId>
     <artifactId>ClientServerATM</artifactId>
 
     <version>1.0-SNAPSHOT</version>
@@ -24,6 +24,8 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
     <dependencies>
