--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -5,6 +5,7 @@ server.port = 8082
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
+#spring.datasource.url=jdbc:h2:mem:mydb
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 #h2 properties
