--- a/client/src/main/resources/application.properties
+++ b/client/src/main/resources/application.properties
@@ -7,7 +7,8 @@ logging.file.name = logs/atm.log
 #kafka properties
 spring.kafka.consumer.bootstrap-servers =  localhost:9092
 spring.kafka.consumer.key-deserializer =  org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer = org.springframework.kafka.support.serializer.JsonDeserializer
+#spring.kafka.consumer.value-deserializer = org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.value-deserializer = org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.properties.spring.json.trusted.packages = *
 
 spring.kafka.producer.bootstrap-servers =  localhost:9092
