--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -17,12 +17,16 @@ logging.file.name = logs/server.log
 
 #kafka properties
 spring.kafka.consumer.bootstrap-servers =  localhost:9092
+
+#consumer
 spring.kafka.consumer.key-deserializer =  org.apache.kafka.common.serialization.StringDeserializer
 #spring.kafka.consumer.value-deserializer = org.springframework.kafka.support.serializer.JsonDeserializer
-spring.kafka.consumer.properties.spring.json.trusted.packages = *
-spring.kafka.consumer.value-deserializer = org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+#spring.kafka.consumer.properties.spring.json.trusted.packages = *
+#spring.kafka.consumer.value-deserializer = org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
 spring.kafka.consumer.properties.spring.deserializer.value.delegate.class = org.apache.kafka.common.serialization.StringDeserializer
-
-spring.kafka.producer.bootstrap-servers =  localhost:9092
+#spring.kafka.consumer.properties.spring.deserializer.value.delegate.class = org.springframework.kafka.support.serializer.JsonDeserializer
+#producer
+#spring.kafka.producer.properties.spring.json.type.mapping=cat:com.mycat.Cat,hat:com.myhat.Hat
+#spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 spring.kafka.producer.key-serializer = org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer = org.springframework.kafka.support.serializer.JsonSerializer
